# UCF-Senior-Design

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  UCF-Senior-Design.code-workspace  certificate.pem  diagram.json  esp_log.txt  firebase_cert.pem  main.cpp  package-lock.json  package.json  sdkconfig  sdkconfig.defaults  start_server.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build.yml  build_and_release.yml  docker-build.yml  docker-image.yml  release-detect.yml  release.yml
Embedded_Application/: Embedded_Application.ino  PIRSensor.cpp
PN532 NFC Module/: #auto_saved_files#  PN532 NFC Module.kicad_prl  PN532 NFC Module.kicad_pro  PN532 NFC Module.kicad_sch  Senior Design Symbols.kicad_sym  sym-lib-table
SCANProject/: PIRSensor.cpp  PIRSensor.h
System Schematic/: Senior-Design-Custom-Symbols.kicad_sym
System Schematic/System Schematic/: Power Circuit.kicad_prl  (+7 more)
main/: main.c
nfc-reader/: README.md  platformio.ini
scan-app/: .firebaserc  database.rules.json  firebase.json  package-lock.json  package.json  reorganizeDatabase.js  scan-9ee0b-default-rtdb-export-2_1_25.json  scan-9ee0b-default-rtdb-export-2_1_25_v2.json  scan-9ee0b-default-rtdb-export-updated.json  scan-9ee0b-default-rtdb-export.json  scan-9ee0b-default-rtdb-export_2_2_25.json  scan-9ee0b-default-rtdb-export_2_2_25_v2.json
server_certs/: github_cert.pem
src/: main.cpp
src/app/ota_update/: CMakeLists.txt  ota.c
src/app/ota_update/include/: ota.h
test/: CMakeLists.txt  sdkconfig
tft-display/: platformio.ini
(+290 files in other folders)
